Video 3.7 - Saving Related Records

--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -1,23 +1,26 @@
 <h1>User</h1>
+<h1>Single record</h1>
 <?php if(property_exists($single, 'id')):?>
 	<?=$single->id; ?>
 	<?=$single->email; ?>
 	<?php print_r($single->getProject('id!=2')->toArray()); ?>
+	<h3>Projects from <?= $single->email ?></h3>
 	<?php foreach($single->project as $p): ?>
 		<?=$p->id; ?>
 		<?=$p->title; ?>
 	<?php endforeach; ?>
 
 <?php endif; ?>
+<h1>All users</h1>
 <hr>
 <?php foreach($all as $user): ?>
 	<?=$user->id; ?>
 	<?=$user->email; ?>
 <?php endforeach; ?>
-
+<h1>First and last Project from the first user</h1>
 <hr>
 
-<?php 
+<?php
 
 	$first = $single->project->getFirst()->toArray();
 	print_r($first);
