--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -26,5 +26,16 @@
 	print_r($first);
 	$first = $single->project->getLast()->toArray();
 	print_r($first);
-	phpinfo(); 
+	//phpinfo();		
+?>
+<h1>Meta-data test</h1>
+<hr>
+<?php 
+	$test = new User();
+	$metaData = $test->getModelsMetaData();
+	$attributes = $metaData->getAttributes($test);
+	print_r($attributes);
+
+	$dataTypes = $metaData->getDataTypes($test);
+	print_r($dataTypes);
 ?>
