--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -1,3 +1,9 @@
+<form action="/user/login" method="post">
+	<input type="text" name="username">
+	<input type="text" name="password">
+	<button type="submit">Login</button>
+
+</form>
 <h1>User</h1>
 <h1>Single record</h1>
 <?php if(property_exists($single, 'id')):?>
