--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>My Phalcon</title>
+	<?php $this->assets->outputCss(); ?>
+	<?php $this->assets->outputJs(); ?>
 </head>
 	
-	<body>
-	<h2>Login Layout</h2>
+	<body>	
 		<?= $this->getContent(); ?>
 	</body>
 </html>
